__shfl_sync is useable in CUDA-9.0 only

--- a/shfl_test/Makefile
+++ b/shfl_test/Makefile
@@ -34,7 +34,7 @@
 ################################################################################
 
 # Location of the CUDA Toolkit
-CUDA_PATH       ?= /usr/local/cuda-7.0
+CUDA_PATH       ?= /usr/local/cuda
 
 ##############################
 # start deprecated interface #
@@ -190,9 +190,9 @@ SAMPLE_ENABLED := 1
 
 # Gencode arguments
 ifeq ($(TARGET_ARCH),armv7l)
-SMS ?= 20 30 32 35 37 50 52
+SMS ?= 30 32 35 37 50 52 61
 else
-SMS ?= 20 30 35 37 50 52
+SMS ?= 30 35 37 50 52 61
 endif
 
 ifeq ($(SMS),)
